--- a/resources/index.html
+++ b/resources/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Redirecting...</title>
-		<meta http-equiv="refresh" content="0;url=https://taipinc.github.io/CoreLab4-EmergingTech-Spring2024//sections/resources/">
+		<meta http-equiv="refresh" content="0;url=CoreLab4-EmergingTech-Spring2024//sections/resources/">
 	</head>
 	<body>
 		<script type="text/javascript">
-			window.location = "https://taipinc.github.io/CoreLab4-EmergingTech-Spring2024//sections/resources/";
+			window.location = "CoreLab4-EmergingTech-Spring2024//sections/resources/";
 		</script>
 
-		<p>You are being redirected to <a href="https://taipinc.github.io/CoreLab4-EmergingTech-Spring2024//sections/resources/">https://taipinc.github.io/CoreLab4-EmergingTech-Spring2024//sections/resources/</a></p>
+		<p>You are being redirected to <a href="CoreLab4-EmergingTech-Spring2024//sections/resources/">CoreLab4-EmergingTech-Spring2024//sections/resources/</a></p>
 	</body>
 </html>
