--- a/sections/photographic-spaces/index.html
+++ b/sections/photographic-spaces/index.html
@@ -147,6 +147,17 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 
 <div class="entry-content alignwide wp-block-post-content has-global-padding is-layout-constrained wp-container-core-post-content-layout-1 wp-block-post-content-is-layout-constrained">
 <div class="wp-block-query has-global-padding is-layout-constrained wp-block-query-is-layout-constrained"><ul class="wp-block-post-template is-layout-flow wp-block-post-template-is-layout-flow">
+<li class="wp-block-post post-163 post type-post status-publish format-standard hentry category-interactivity">
+<h2 class="wp-block-post-title"><a href="/CoreLab4-EmergingTech-Spring2024/bla-bla/" target="_self">bla bla</a></h2>
+
+
+
+<div class="wp-block-post-excerpt"><p class="wp-block-post-excerpt__excerpt"> </p></div>
+
+
+<hr class="wp-block-separator has-css-opacity">
+
+</li>
 <li class="wp-block-post post-135 post type-post status-publish format-standard hentry category-extra">
 <h2 class="wp-block-post-title"><a href="/CoreLab4-EmergingTech-Spring2024/video-workshop-building-a-good-and-free-or-almost-free-artist-website/" target="_self">Video Workshop: Building a Good and Free (or almost free) Artist Website</a></h2>
 
@@ -237,17 +248,6 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/14
 </li>
 <li class="wp-block-post post-107 post type-post status-publish format-standard hentry category-photographic-spaces">
 <h2 class="wp-block-post-title"><a href="/CoreLab4-EmergingTech-Spring2024/week-12/" target="_self">Week 12</a></h2>
-
-
-
-<div class="wp-block-post-excerpt"><p class="wp-block-post-excerpt__excerpt"> </p></div>
-
-
-<hr class="wp-block-separator has-css-opacity">
-
-</li>
-<li class="wp-block-post post-105 post type-post status-publish format-standard hentry category-generativity">
-<h2 class="wp-block-post-title"><a href="/CoreLab4-EmergingTech-Spring2024/week-10/" target="_self">Week 10</a></h2>
 
 
 
